--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -31,7 +31,7 @@ logging.level.biz.nable.sb.cor.comp=DEBUG
 custom.iib.finacle.integration.url = http://10.30.2.114:7800/sd/iib/IIBFinacleIntegration
 nable.biz.common.util.approval.service.url=http://localhost:9083/apprv
 commission.microservice.url=http://localhost:9083/commission
-limit.microservice.url=http://localhost:9081/limit
+limit.microservice.url=http://localhost:9083/limits
 #==========================
 # Application
 #==========================
