--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -48,7 +48,7 @@ logging.level.biz.nable.sb.cor.comp=DEBUG
 custom.iib.finacle.integration.url = http://10.30.2.114:7800/sd/iib/IIBFinacleIntegration
 nable.biz.common.util.approval.service.url=http://localhost:9081/apprv
 commission.microservice.url=http://localhost:9081/commission
-limit.microservice.url=http://localhost:9081/limit
+limit.microservice.url=http://localhost:9081/limits
 
 #==========================
 # Application
