--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -83,7 +83,7 @@ custom.iib.finacle.integration.url = http://10.30.2.114:7800/sd/iib/IIBFinacleIn
 nable.biz.common.util.approval.service.url=http://localhost:8081
 #nable.biz.common.util.approval.service.url=http://10.30.2.111:9081/apprv
 commission.microservice.url=http://localhost:8083
-limit.microservice.url=http://localhost:9081/limit
+limit.microservice.url=http://localhost:9081/limits
 #==========================
 # Application
 #==========================
