--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -84,6 +84,8 @@ nable.biz.common.util.approval.service.url=http://localhost:8081
 #nable.biz.common.util.approval.service.url=http://10.30.2.111:9081/apprv
 commission.microservice.url=http://localhost:8083
 limit.microservice.url=http://localhost:9081/limits
+#nable.biz.common.util.workflow.service.url=http://localhost:8080
+nable.biz.common.util.workflow.service.url=http://10.30.2.111:9081/workflow
 #==========================
 # Application
 #==========================
